2000-04-15  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-expand-groups-for-chat-invitation): was assuming
	tnt-buddy-alist contains only online buddies.  in fact it also
	contains buddies who have been online and signed off.  now calling
	tnt-online-buddies-collection instead.

2000-04-13  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-config-to-blist): fixed paren typo.

2000-04-13  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-buddy-alist): moved declaration earlier to avoid
	compiler complaining.

2000-04-13  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el (tnt-turn-on-debugging): added
	(tnt-turn-off-debugging): added
	(tnt-affect-debugging): added
	(tnt-handle-config): Set up permit/deny correctly
	(tnt-config-to-blist): Also parse permit/deny stuff
	(tnt-blist-to-config): Also spit out permit deny stuff
	(tnt-blist-to-config): Simplified, probably sped up by getting rid 
	of whiles and using built in mapconcats

	* toc.el (toc-permit-only): Added
	(toc-deny-only): Added
	(toc-permit-all): Added
	(toc-deny-all): Added
	(toc-add-permit): Simplified
	(toc-add-deny): Simplified

2000-04-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-send-text-as-chat-invitation): you can now give the
	name of one of your buddy groups in the list of people to invite.
	(tnt-expand-groups-for-chat-invitation): given the user-list,
	replaces any groups with all the members of that group who are
	currently online and are not already in this chat.
	(tnt-online-buddies-and-groups-collection): added.  for
	tab-completion of the invite list.  basically appends the list of
	all online buddies with the list of all groups (whether or not
	anyone in that group is currently online).

2000-04-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-completing-read-list): removed extraneous (let
	((collection collection)) ...)

2000-04-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>
